добавил получение назначенных тестов
