# app/Http/Controllers/Api/V1/TestController.php
@@ -21,7 +21,7 @@ class TestController extends Controller
      *          @OA\MediaType(mediaType="application/json",
      *              @OA\Schema(
      *                 @OA\Property(property="total", type="integer", description="Общее количество записей"),
-     *                  @OA\Property(property="tests", type="array", @OA\Items(ref="#/components/schemas/Test"))
+     *                  @OA\Property(property="tests", type="array", @OA\Items(ref="#/components/schemas/TestShortResource"))
      *              ),
      *          ),
      *      ),
