# app/Models/Group.php
@@ -3,6 +3,7 @@
 namespace App\Models;
 
 use App\Models\BaseModel;
+use Illuminate\Database\Eloquent\Relations\BelongsToMany;
 
 /**
  * @OA\Schema(schema="Group", description="Группа", properties={
@@ -17,8 +18,13 @@ class Group extends BaseModel
         'priority',
     ];
 
-    public function users()
+    public function users(): BelongsToMany
     {
         return $this->belongsToMany(User::class, 'user_groups', 'group_id', 'user_id');
+    }
+
+    public function tests(): BelongsToMany
+    {
+        return $this->belongsToMany(Test::class, 'test_groups', 'group_id', 'test_id');
     }
 }
