# app/Models/UserTest.php
@@ -2,6 +2,8 @@
 
 namespace App\Models;
 
+use Illuminate\Database\Eloquent\Relations\BelongsTo;
+
 /**
  * @OA\Schema(schema="UserTest", description="Тесты пользователя", properties={
  *      @OA\Property(property="user_id", type="string", format="uuid", description="ID пользователя", example="123e4567-e89b-12d3-a456-426614174000"),
@@ -18,4 +20,9 @@ class UserTest extends BaseModel
         'assigner_id',
         'completion_status',
     ];
+
+    public function assigner(): BelongsTo
+    {
+        return $this->belongsTo(User::class, 'assigner_id');
+    }
 }
